fix: recipe detail image cropping

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -436,7 +436,7 @@
   max-width: 650px;
   margin-top: 1rem;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   font-family: "Georgia", serif;
   line-height: 1.6;
   color: #5c3d31;
